
name:                haskell-game
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Rafael Mota
maintainer:          rma7@cin.ufpe.br
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable haskell-game
  main-is:             Main.hs
  other-modules: Entities.Draw, Entities.Game
  -- other-extensions:
  build-depends:       base, gloss, stm
  hs-source-dirs:      src

  default-language:    Haskell2010
  
